force-app/main/default/staticresources/python/Disappear/src/objects/Publication__c.object
<CustomObject>
    <description>Contains the Publication Details for each Publication Record</description>
    <fields>
        <fullName>Add_First_Author__c</fullName>
        <label>Add First Author</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Meeting_Journal__c</fullName>
        <description>This field is used to enter the Target if not found using the &quot;Target&quot; component.</description>
        <inlineHelpText>If the target is not found using the Target button on the Details page, then enter the target in this field by clicking the Edit button on the top.</inlineHelpText>
        <label>Target Not Found</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Products__c</fullName>
        <label>Add Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Spon_Team_Members__c</fullName>
        <label>Add Spon Team Members</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalStudyNumbers__c</fullName>
        <label>AdditionalStudyNumbers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Desc__c</fullName>
        <description>Used primarily for data migration</description>
        <label>Analysis Description</label>
        <picklist>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subgroup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analysis_Type__c</fullName>
        <label>Analysis Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bio-Markers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demographics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immune Markers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term Safety and Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanism of Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacodynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Models</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacokinetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epidemiology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_FPRC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to FPR Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authors_Not_Found__c</fullName>
        <label>Authors Not Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authors__c</fullName>
        <label>Authors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Citation__c</fullName>
        <inlineHelpText>Please include the FULL citation from PubMed: Once the publication is located at http://www.ncbi.nlm.nih.gov/pubmed/, click &apos;send to&apos; &gt; &apos;file&apos; &gt; and select &apos;summary (text)&apos;.  Click &apos;open&apos; to copy and paste the citation from the clipboard</inlineHelpText>
        <label>Citation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsByAuthors__c</fullName>
        <description>Comments provided by author(s) collaborated in this publication</description>
        <inlineHelpText>Comments provided by author(s) collaborated in this publication</inlineHelpText>
        <label>Comments by Author(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsForAllAuthors__c</fullName>
        <description>Comments for authors collaborated in this publication</description>
        <inlineHelpText>Comments for authors collaborated in this publication</inlineHelpText>
        <label>Comments for all Author(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_For_Approvers__c</fullName>
        <label>Comments for FPR Reviewers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_For_Coordinator__c</fullName>
        <label>Comments for FPR Coordinator</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Ctr__c</fullName>
        <label>Cost Ctr#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Country is required if SubGroup selected is LACAN, JAPAC, EEMEA for &apos;Global Development&apos; Data Source</inlineHelpText>
        <label>Country Link</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_pick__c</fullName>
        <description>07/30: Nagaraj Cheelad (CTS): updated the help text</description>
        <inlineHelpText>Country is required if SubGroup selected is Global Dev – Europe, Global Dev – Intercont,Global Dev – JAPAC,Global Dev – US for &apos;Development&apos; Data Source</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balkans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central And Eastern Europe (CEE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CumulativeME__c</fullName>
        <label>Cumulative ME</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FPRCycle_Id_Formula__c</fullName>
        <formula>PubStatus__r.FPR_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FPR Cycle Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FPR_Cycle_Num__c</fullName>
        <description>PubStatus__r.FPR_Cycle_Num_Formula__c</description>
        <formula>PubStatus__r.FPR_Cycle_Num_Formula__c</formula>
        <label>Current FPR Cycle Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FPR_Cycle_sort_num__c</fullName>
        <formula>PubStatus__r.FPR_Cycle_sort_num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FPR Cycle num for sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status_Date_FormulaField__c</fullName>
        <formula>PubStatus__r.ActualDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Status_FormulaField__c</fullName>
        <description>Used to make Current Status a &quot;read only&quot; field</description>
        <formula>PubStatus__r.Status__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Id_FormulaField__c</fullName>
        <formula>PubStatus__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SubmissionCycle_Id_Formula__c</fullName>
        <formula>PubStatus__r.Submission_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Submission Cycle Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Submission_Cycle_Num__c</fullName>
        <formula>PubStatus__r.Submission_Cycle_Num_Formula__c</formula>
        <label>Current Submission Cycle Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Target__c</fullName>
        <description>The Current Target field will also be used to populate the Target field for a new Submission Cycle.
This field should NEVER be moved to a formula</description>
        <inlineHelpText>This field is populated automatically by using the &quot;Target&quot; button on the Details tile.  If the desired target is NOT found using the Target button, please use the &quot;Target Not Found&quot; field below.</inlineHelpText>
        <label>Current Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceFormulaField__c</fullName>
        <formula>SubGroup__r.Data_Source__r.Name</formula>
        <label>Data Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRAAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Expected_By__c</fullName>
        <label>Date Expected By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_FPR_Due_Date__c</fullName>
        <formula>CASE(MOD( Today() - DATE(1985,6,24),7), 
  0 , CASE( MOD( FPR_Due_Date__c - Today() ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FPR_Due_Date__c  - Today() ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FPR_Due_Date__c - Today() ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FPR_Due_Date__c - Today() ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FPR_Due_Date__c  - Today() ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FPR_Due_Date__c  - Today() ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FPR_Due_Date__c  - Today() ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FPR_Due_Date__c - Today() )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to FPR Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electron_Copy_Filename__c</fullName>
        <description>stored in parent id of content and attachment;  File Link 1 / File Link 2</description>
        <label>Electron Copy Filename</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Notes_Last_Mod__c</fullName>
        <label>Execution Notes Last Mod</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Execution_Notes__c</fullName>
        <label>Execution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FPR_CurrentStatus_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPR CurrentStatus Id</label>
        <referenceTo>Status__c</referenceTo>
        <relationshipLabel>Publication - FPR Status</relationshipLabel>
        <relationshipName>FPR_Status_Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPR_Due_Date__c</fullName>
        <inlineHelpText>As best practice, select an FPR due date that is more than 10 business days from today. If this is a rush request, provide business justification in the Comments for FPR Coordinator section and we will try to facilitate your request.</inlineHelpText>
        <label>FPR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPR_Submitter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>FPR_Submitter will record the latest person that click on the Submit to FPR button.

DO NOT USE this field to check if a pub is an FPR Only Pub</description>
        <label>FPR Submitter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication (FPR Submitter)</relationshipLabel>
        <relationshipName>FPR_Submitter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPR_Submitter_text__c</fullName>
        <label>FPR Submitter_text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication (First Author)</relationshipLabel>
        <relationshipName>Publication2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GMWArea__c</fullName>
        <label>GMWArea</label>
        <picklist>
            <picklistValues>
                <fullName>Bone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardio-Renal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflammation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosimilars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPP_Type__c</fullName>
        <description>Used for Classification of GPP publication and mandatory for if Publication is GPP type.</description>
        <label>Publication Classification</label>
        <picklist>
            <picklistValues>
                <fullName>CSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSP Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Deliverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HasFprOnlyStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean storing history of whether publication was submitted via fpr-only process. Use IsFprOnly for reporting</description>
        <label>HasFprOnlyStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasUSAuthors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean to indicate whether pub has one or more US authors. Kept in sync by author trigger.</description>
        <label>Has US Authors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBiosimilars__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select the box if this publication record may be related to Biosimilars</inlineHelpText>
        <label>Biosimilars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsComments_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for data migration</description>
        <inlineHelpText>Intended for comments only review</inlineHelpText>
        <label>Courtesy Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFprOnly__c</fullName>
        <description>Publication submitted by fpr only process and not moved to GPP</description>
        <formula>HasFprOnlyStatus__c &amp;&amp; !isPlanning__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is FPR Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for UI operation - please do not store or migrate data into this field</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tracking_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracking Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kirin_Number__c</fullName>
        <label>Kirin Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedBy__c</fullName>
        <label>Legacy Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedBy__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Authors__c</fullName>
        <description>Field to store Legacy Authors from Siebel - requested by Kelly / Leslie.
RW for the following Profiles
Planning + FPRC + IFPRC + BA + SA + Writer</description>
        <label>Legacy Authors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_FPR_Submitters_not_found__c</fullName>
        <label>Legacy FPR Submitters not found</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_PublicationID__c</fullName>
        <label>Legacy Pub ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_File2__c</fullName>
        <label>Link to File2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_File_1__c</fullName>
        <label>Link to File 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Final_Publication_Version__c</fullName>
        <description>This is the new field that is used to store the url for the link to final publication.  It was created as a text field because it was automatically appending the wrong prefix which errored out for users when trying to open the publication.</description>
        <inlineHelpText>Please copy this url in your browser to get to the final publication.</inlineHelpText>
        <label>Link to Final Publication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Final_Publication__c</fullName>
        <inlineHelpText>URL to the repository where the final publication is stored.</inlineHelpText>
        <label>Link to Final Publication</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MTA__c</fullName>
        <label>MTA #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingName__c</fullName>
        <label>MeetingName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Meeting</inlineHelpText>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoGlobalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for migrated data which we do not want to generate GlobalStatus after insert of the Publication Records.

Will be set to unchecked for all New Publication created in Appear</description>
        <label>NoGlobalStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Product_No_TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Product No TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Product_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Product / Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PASS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to the associated oublication study/project</description>
        <label>PASS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PST_Approval_Submission_Date__c</fullName>
        <label>PST Approved Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PST_Approved_Audit_Date__c</fullName>
        <description>Audit Date to track PST Approved Submission Date based on the YEAR of change.</description>
        <label>PST Approved Audit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannedME__c</fullName>
        <label>Planned ME</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Comments__c</fullName>
        <label>Planning Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreFPRReviewers_Not_Found__c</fullName>
        <description>List of the FPR Reviewers that are not found in the system</description>
        <label>Pre-FPR Reviewers Not Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Type__c</fullName>
        <inlineHelpText>Some publication types may additionally require selection of a Presentation Type.</inlineHelpText>
        <label>Presentation Type</label>
        <picklist>
            <controllingField>Publication_Type__c</controllingField>
            <picklistValues>
                <fullName>Moderated Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Sci_Stmnt__c</fullName>
        <description>relates to ProdIndObjSciStatement object</description>
        <label>Primary Sci Stmnt id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <description>Related to Pub Product Indication</description>
        <label>Primary Prod Ind Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>A = Highest Priority
B = Medium Priority
C = Lowest Priority</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Indication_Not_Found__c</fullName>
        <label>Product - Indication Not Found</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <description>A READ ONLY string that list all product Indications for the Publication
The key product indication will be list at the first entry</description>
        <inlineHelpText>Product - Indication is a required field that is available for selection when a publication is first saved. Once saved, the Product Indication may be edited using the Product Indication button.</inlineHelpText>
        <label>Product - Indication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Acronyms__c</fullName>
        <description>Used to collect all study Ids, concat in string in trigger</description>
        <label>Project Acronymns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Ids__c</fullName>
        <description>Used to collect all study Ids, concat in string in trigger</description>
        <label>Project Ids</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PubMed_ID__c</fullName>
        <label>PubMed ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubState__c</fullName>
        <formula>PubStatus__r.RecordType.DeveloperName</formula>
        <label>PubState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubStatus__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Current status of this publication</description>
        <label>PubStatus</label>
        <referenceTo>PubStatus__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PubType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User will pick a Publication_Type in Picklist
then trigger or code will fill in the proper PubType__c</description>
        <label>PubType Link</label>
        <referenceTo>PubType__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pub_Classification__c</fullName>
        <inlineHelpText>Identify if publication is defined as a Scientific Publication (SP) or Clinical Scientific Publication (CSP) as per the Publications SOP.</inlineHelpText>
        <label>Pub Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Scientific Publication (SP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Scientific Publications (CSP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Team__c</fullName>
        <label>Publication Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <inlineHelpText>This is a succinct but descriptive Title of the Publication</inlineHelpText>
        <label>Publication Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
</CustomObject>